--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
