--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL = "http://localhost:8080"
+#VITE_BACKEND_URL = "http://localhost:8080"
+VITE_BACKEND_URL=https://eldercareconatinerapp.salmonhill-4f48000a.southeastasia.azurecontainerapps.io/
