--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,10 +4,16 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
+    env:
+      ACR_NAME: ${{ secrets.ACR_NAME }}
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
 
     steps:
       - name: Checkout code
@@ -16,14 +22,14 @@ jobs:
       - name: Login to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ secrets.ACR_NAME }}.azurecr.io
+          login-server: ${{ env.ACR_NAME }}.azurecr.io
           username: ${{ secrets.ELDERCARE_REGISTRY_USERNAME }}
           password: ${{ secrets.ELDERCARE_REGISTRY_PASSWORD }}
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ACR_NAME }}.azurecr.io/eldercare-backend:latest .
+          docker build -t ${{ env.ACR_NAME }}.azurecr.io/eldercare-frontend:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.ACR_NAME }}.azurecr.io/eldercare-backend:latest
+          docker push ${{ env.ACR_NAME }}.azurecr.io/eldercare-frontend:latest
