Refactor Azure login and Docker login steps
Updated Azure login method and Docker login steps.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,17 +19,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Login to Azure Container Registry
-        uses: azure/docker-login@v1
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          login-server: ${{ env.ACR_NAME }}.azurecr.io
-          username: ${{ secrets.ELDERCARE_REGISTRY_USERNAME }}
-          password: ${{ secrets.ELDERCARE_REGISTRY_PASSWORD }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Docker Login via Azure CLI
+        run: |
+          az acr login --name $ACR_NAME
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ env.ACR_NAME }}.azurecr.io/eldercare-frontend:latest .
+          docker build -t $ACR_NAME.azurecr.io/eldercare-frontend:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{ env.ACR_NAME }}.azurecr.io/eldercare-frontend:latest
+          docker push $ACR_NAME.azurecr.io/eldercare-frontend:latest
